--- a/templates/form/delivery.html.twig
+++ b/templates/form/delivery.html.twig
@@ -179,8 +179,10 @@ col-md-9
 {% endblock %}
 
 {% block _delivery_tasks_entry_timeSlot_widget %}
-  {{ form_widget(form) }}
   {% if form.parent.switchTimeSlot is defined %}
     {{ form_widget(form.parent.switchTimeSlot) }}
   {% endif %}
+
+  {{ block('hidden_widget') }}
+  <div id="{{ form.vars.id ~ '_widget' }}"></div>
 {% endblock %}
