display store link in breadcrumbs

--- a/templates/delivery/item.html.twig
+++ b/templates/delivery/item.html.twig
@@ -34,6 +34,7 @@
     {% if order is not null %}
       <li>{% trans %}adminDashboard.orders.title{% endtrans %}</li>
       <li><a href="{{ path('admin_order', { id: order.id }) }}" data-testid="order_id">{{ order.number }}</a></li>
+      <li>{% trans %}basics.editing{% endtrans %}</li>
     {% else %}
       <li>{% trans %}adminDashboard.deliveries.title{% endtrans %}</li>
       <li>#{{ delivery.id }}</li>
