--- a/templates/form/delivery.html.twig
+++ b/templates/form/delivery.html.twig
@@ -180,7 +180,7 @@ col-md-9
 
 {% block _delivery_tasks_entry_timeSlot_widget %}
   {% if form.parent.switchTimeSlot is defined %}
-    {{ form_widget(form.parent.switchTimeSlot) }}
+    {{ form_widget(form.parent.switchTimeSlot, {attr: { class: 'd-none' }}) }}
   {% endif %}
 
   {{ block('hidden_widget') }}
