--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -1,61 +1,60 @@
-{% if form.pricingRuleSet is defined or form.prefillPickupAddress is defined %}
-  {% if form.pricingRuleSet is defined and form.pricingRuleSet.vars.choices|length == 0 %}
-    <div class="alert alert-warning">{% trans with {'%editPricingRule%':admin_deliveries_pricing} %}restaurant.form.noPricingRule{% endtrans %}</div>
+{% if form.pricingRuleSet is defined %}
+  {% if form.pricingRuleSet.vars.choices|length == 0 %}
+    <div
+      class="alert alert-warning">{% trans with {'%editPricingRule%':admin_deliveries_pricing} %}restaurant.form.noPricingRule{% endtrans %}</div>
     <div class="hidden">
       {{ form_row(form.pricingRuleSet) }}
-      {% if form.prefillPickupAddress is defined %}
-        {{ form_row(form.prefillPickupAddress) }}
-      {% endif %}
     </div>
   {% else %}
-    {% if form.pricingRuleSet is defined %}
-      {{ form_row(form.pricingRuleSet) }}
-      {% if form.pricingRuleSet.vars.data is null %}
-        <div class="alert alert-warning">{% trans %}form.store_type.pricing_rule_set.warning{% endtrans %}</div>
-      {% endif %}
-    {% endif %}
-    {% if form.prefillPickupAddress is defined %}
-      {{ form_row(form.prefillPickupAddress) }}
-    {% endif %}
-    {% if form.weightRequired is defined %}
-      {{ form_row(form.weightRequired) }}
-    {% endif %}
-    {% if form.packagesRequired is defined %}
-      {{ form_row(form.packagesRequired) }}
-    {% endif %}
-    {% if form.multiDropEnabled is defined %}
-      {{ form_row(form.multiDropEnabled) }}
-    {% endif %}
-    {% if form.checkExpression is defined %}
-      {{ form_row(form.checkExpression) }}
+    {{ form_row(form.pricingRuleSet) }}
+    {% if form.pricingRuleSet.vars.data is null %}
+      <div
+        class="alert alert-warning">{% trans %}form.store_type.pricing_rule_set.warning{% endtrans %}</div>
     {% endif %}
   {% endif %}
-  <hr>
+{% endif %}
+
+{% if form.prefillPickupAddress is defined %}
+  {{ form_row(form.prefillPickupAddress) }}
+{% endif %}
+{% if form.weightRequired is defined %}
+  {{ form_row(form.weightRequired) }}
+{% endif %}
+{% if form.packagesRequired is defined %}
+  {{ form_row(form.packagesRequired) }}
+{% endif %}
+{% if form.multiDropEnabled is defined %}
+  {{ form_row(form.multiDropEnabled) }}
+{% endif %}
+{% if form.checkExpression is defined %}
+  {{ form_row(form.checkExpression) }}
 {% endif %}
 
 {% if form.transporter is defined %}
-  {{ form_row(form.transporter) }}
   <hr>
+  {{ form_row(form.transporter) }}
 {% endif %}
 
 {% if form.vars.data.id is not null %}
+  <hr>
   <div {{ react_component('Store/TimeSlot', {
     store: form.vars.data|serialize,
   }) }}>
   </div>
-  <hr>
 {% endif %}
 
 {% if form.packageSet is defined %}
-  {{ form_row(form.packageSet) }}
   <hr>
+  {{ form_row(form.packageSet) }}
 {% endif %}
 
 {% if form.tags is defined %}
+  <hr>
   {{ form_row(form.tags) }}
 {% endif %}
-<hr>
+
 {% if form.failureReasonSet is defined %}
+  <hr>
   {{ form_row(form.failureReasonSet) }}
 {% endif %}
 
