--- a/templates/order/payment.html.twig
+++ b/templates/order/payment.html.twig
@@ -53,8 +53,26 @@
             {{ form_widget(form.stripePayment.stripeToken) }}
             {{ form_widget(form.stripePayment.savedPaymentMethodId) }}
 
-            <div id="card-element">
-              <!-- a React element will be inserted here. -->
+            <div id="card-onmount-focus">
+              <div id="card-element">
+                <!-- a React element will be inserted here. -->
+              </div>
+              <div id="paygreen-container"></div>
+              {#
+              We DO NOT add the methods container on purpose,
+              because we manage them at a upper level.
+              #}
+              <!--
+              <div id="paygreen-methods-container"></div>
+              -->
+              <div>
+                <div id="paygreen-pan-frame" class="mb-3"></div>
+                <div class="d-flex justify-content-between mb-3">
+                  <div id="paygreen-exp-frame"></div>
+                  <div id="paygreen-cvv-frame"></div>
+                </div>
+                <div id="paygreen-reuse-checkbox-container"></div>
+              </div>
             </div>
 
             <div id="card-errors" role="alert" class="text-danger"></div>
@@ -98,9 +116,15 @@
 
 {% block styles %}
   {{ encore_entry_link_tags('order-payment') }}
+  {% if paygreen_environment == 'SANDBOX' %}
+  <link href="https://sb-pgjs.paygreen.fr/latest/paygreen.min.css" type="text/css" rel="stylesheet" />
+  {% else %}
+  <link href="https://pgjs.paygreen.fr/latest/paygreen.min.css" type="text/css" rel="stylesheet" />
+  {% endif %}
 {% endblock %}
 
 {% block scripts %}
+
 {% if not order.empty %}
   {{ encore_entry_script_tags('order-payment') }}
   {% include 'payment/scripts.html.twig' with {
