--- a/templates/payment/paygreen_webview.html.twig
+++ b/templates/payment/paygreen_webview.html.twig
@@ -13,19 +13,17 @@
     {{ encore_entry_link_tags('paygreen-webview') }}
   </head>
   <body>
-    <!--Paygreen-->
     <div id="paygreen-container"></div>
-    <!--Paygreen-->
+    <!--
     <div id="paygreen-methods-container"></div>
+    -->
     <div class="px-3 pt-3 mb-3">
-      <!--Paygreen-->
       <div id="paygreen-pan-frame" class="mb-3"></div>
       <div class="d-flex">
         <div id="paygreen-exp-frame"></div>
         <div id="paygreen-cvv-frame"></div>
       </div>
     </div>
-    <!--Paygreen-->
     <div id="paygreen-reuse-checkbox-container"></div>
     <div id="test"></div>
     <script>
@@ -84,7 +82,7 @@
         paymentOrderID: '{{ payment_order_id }}',
         objectSecret: '{{ object_secret }}',
         mode: 'payment',
-        displayAuthentication: 'inline'
+        paymentMethod: 'bank_card',
       });
     });
     </script>
