unify food tech vs non food tech deliveries check

--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -15,6 +15,7 @@
 {% block content %}
 
   {% set is_new = delivery.id is null %}
+  {% set is_food_tech_order = delivery.order is not empty ? delivery.order.isFoodtech() : false %}
 
   {{ form_start(form, { attr: {
     'data-store': delivery.store is not empty ? delivery.store|get_iri_from_item : null,
@@ -147,13 +148,13 @@
     <div class="col-md-7">
     </div>
     <div class="col-md-5 delivery__form__buttons">
-      {% if is_new or is_granted('ROLE_DISPATCHER')  %}
+      {% if is_new or (not is_food_tech_order and is_granted('ROLE_DISPATCHER'))  %}
         <button id="delivery-submit" type="submit" class="btn btn-block btn-lg btn-primary">
           <i class="fa fa-spinner fa-spin hidden" id="loader"></i>
           {% trans %}basics.save{% endtrans %}
         </button>
       {% endif %}
-      {% if is_granted('ROLE_ADMIN') and not is_new and delivery.store is not empty and delivery.order is not empty %}
+      {% if is_granted('ROLE_DISPATCHER') and not is_new and not is_food_tech_order and delivery.order is not empty %}
         <a href="{{ path('admin_store_delivery_new',
           { id: delivery.store.id, frmrdr: delivery.order|hashid(16) }
         ) }}" class="btn btn-block btn-lg btn-secondary">
