--- a/templates/_partials/order/summary.html.twig
+++ b/templates/_partials/order/summary.html.twig
@@ -1,10 +1,10 @@
-{% if order.fulfillmentMethod is not empty and order.fulfillmentMethod == 'collection' %}
-  <i class="fa fa-cube mr-2"></i>
-{% else %}
-  <i class="fa fa-bicycle mr-2"></i>
-{% endif %}
 <span>
 {% if order.hasVendor() %}
+  {% if order.fulfillmentMethod is not empty and order.fulfillmentMethod == 'collection' %}
+    <i class="fa fa-cube mr-2"></i>
+  {% else %}
+    <i class="fa fa-bicycle mr-2"></i>
+  {% endif %}
   {% if order.isMultiVendor() %}
     {% trans with {
         '%name%': order.vendor.name
@@ -25,8 +25,6 @@
     {% endif %}
   {% endif %}
 {% else %}
-  {% for item in order.items %}
-    {{ item.variant.name }}
-  {% endfor %}
+    {% include '_partials/delivery/summary.html.twig' with { delivery: order.delivery } %}
 {% endif %}
 </span>
