--- a/templates/_partials/order/items.html.twig
+++ b/templates/_partials/order/items.html.twig
@@ -129,9 +129,15 @@
     {% endif %}
     {% if with_total_excluding_tax is defined and with_total_excluding_tax %}
       <tr>
-        <th>{% trans %}order.total_excluding_tax{% endtrans %}</th>
+        <th>{% trans %}order.items_total_excluding_tax{% endtrans %}</th>
         <td class="text-right text-nowrap">
           {{ (order.itemsTotal - order.itemsTaxTotal)|price_format }}
+        </td>
+      </tr>
+      <tr>
+        <th>{% trans %}order.total_excluding_tax{% endtrans %}</th>
+        <td class="text-right text-nowrap">
+          {{ (order.total - order.taxTotal)|price_format }}
         </td>
       </tr>
     {% endif %}
