--- a/templates/_partials/recurrence_rule/list.html.twig
+++ b/templates/_partials/recurrence_rule/list.html.twig
@@ -51,7 +51,7 @@
               <span
                 class="text-muted">{% trans %}order.total_excluding_tax{% endtrans %}</span>
               <span
-                class="text-monospace">{{ (templateOrder.itemsTotal - templateOrder.itemsTaxTotal)|price_format }}</span>
+                class="text-monospace">{{ (templateOrder.total - templateOrder.taxTotal)|price_format }}</span>
             </span>
             <span class="d-flex justify-content-between align-items-center">
               <span
