--- a/templates/_partials/delivery/list.html.twig
+++ b/templates/_partials/delivery/list.html.twig
@@ -84,7 +84,7 @@
         {% if delivery.order is defined and delivery.order is not empty %}
           <span class="d-flex justify-content-between align-items-center">
             <span class="text-muted">{% trans %}order.total_excluding_tax{% endtrans %}</span>
-            <span class="text-monospace">{{ (delivery.order.itemsTotal - delivery.order.itemsTaxTotal)|price_format }}</span>
+            <span class="text-monospace">{{ (delivery.order.total - delivery.order.taxTotal)|price_format }}</span>
           </span>
           <span class="d-flex justify-content-between align-items-center">
             <span class="text-muted">{% trans %}order.total_including_tax{% endtrans %}</span>
