renamed: index -> page

--- a/templates/admin/invoicing.html.twig
+++ b/templates/admin/invoicing.html.twig
@@ -9,5 +9,5 @@
 {% endblock %}
 
 {% block content %}
-  <div id="invoicing" {{ react_component('admin/invoicing/index') }}></div>
+  <div id="invoicing" {{ react_component('admin/invoicing/page') }}></div>
 {% endblock %}
