--- a/templates/order/_partials/navbar.html.twig
+++ b/templates/order/_partials/navbar.html.twig
@@ -33,6 +33,21 @@
             </a>
           </li>
         {% endif %}
+        {% if is_granted('ROLE_DISPATCHER') %}
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+               aria-haspopup="true" aria-expanded="false">{{ 'basics.more'|trans }} <span
+                class="caret"></span></a>
+            <ul class="dropdown-menu">
+
+              <li id="report-incident" {{ react_component('admin/orders/[id]/ReportIncidentModal', {
+                items: order.delivery.items|serialize('jsonld', {groups: ['task', 'task_collection', 'address']})
+              }) }}>
+              </li>
+
+            </ul>
+          </li>
+        {% endif %}
       </div>
     </div>
   </div>
