added: a component to link to docs

--- a/templates/admin/incidents.html.twig
+++ b/templates/admin/incidents.html.twig
@@ -9,6 +9,10 @@
 <li>{% trans %}adminDashboard.incidents.title{% endtrans %}</li>
 {% endblock %}
 
+{% block docs %}
+  {% include '_partials/docs.html.twig' with { docsPath: 'adminDashboard.incidents.docs_path' } %}
+{% endblock %}
+
 {% block content %}
 <div {{ react_component('Incident/List') }}></div>
 {% endblock %}
