--- a/templates/deliveries.html.twig
+++ b/templates/deliveries.html.twig
@@ -11,6 +11,7 @@
       {% block breadcrumb %}
       <li><a href="{{ path('admin_deliveries') }}">{% trans %}adminDashboard.deliveries.title{% endtrans %}</a></li>
       {% endblock %}
+      <div class="pull-right">{% block docs %}{% endblock %}</div>
     </ol>
     {% block content %}
     {% endblock %}
