added: temporary docs for invoicing

--- a/templates/admin/invoicing.html.twig
+++ b/templates/admin/invoicing.html.twig
@@ -8,6 +8,10 @@
 <li>{{ 'adminDashboard.invoicing.title'|trans }}</li>
 {% endblock %}
 
+{% block docs %}
+  {% include '_partials/docs.html.twig' with { url: 'https://docs.google.com/document/d/1KqlJve8gdv4hoNyrfS4ge6G7Nl7khWmgULzcntP6opk/edit?usp=sharing' } %}
+{% endblock %}
+
 {% block content %}
   <div id="invoicing" {{ react_component('admin/invoicing/page') }}></div>
 {% endblock %}
