--- a/assets/react/controllers/Delivery/DeliveryForm.scss
+++ b/assets/react/controllers/Delivery/DeliveryForm.scss
@@ -1,15 +1,20 @@
-.new-order, .delivery-form {
+.delivery-form {
   display: flex;
   flex-wrap: wrap;
+  gap: 2em;
+  padding: 2em;
   
 }
 
 .new-order {
-  justify-content: space-around;
+  display: flex;
+  justify-content: space-between;
   gap: 2em;
+  max-width: 70%;
+  flex-wrap: wrap;
   
   &__item {
-    max-width: 400px;
+    max-width: 45%;
   }
 }
 
@@ -22,7 +27,7 @@
   align-self: start;
   position: sticky;
   top:0;
-  min-width: 300px;
+  min-width: 280px;
 }
 
 
@@ -38,6 +43,11 @@
 
   .new-order{
     flex-direction: column;
+
+
+    &__item {
+      max-width: 100%;
+    }
   }
 
 
@@ -47,9 +57,14 @@
   .delivery-form{
     flex-direction: column;
     align-items: center;
-    gap: 2em
+    gap: 2em;
   }
 
+  .new-order {
+    margin-top: 2em;
+    max-width: 100%;
+  }
+  
   .order-informations{
 
     width: 100%;
