Allow using Paygreen for a restaurant.

--- a/templates/restaurant/form/_partials/payment.html.twig
+++ b/templates/restaurant/form/_partials/payment.html.twig
@@ -42,6 +42,10 @@
     {{ form_row(form.paygreenShopId) }}
   {% endif %}
 
+  {% if form.usePaygreen is defined %}
+    {{ form_row(form.usePaygreen) }}
+  {% endif %}
+
 {% endif %}
 
 {% if form.allowStripeConnect is defined and not form.allowStripeConnect.rendered %}
