--- a/templates/store/deliveries/beta_new.html.twig
+++ b/templates/store/deliveries/beta_new.html.twig
@@ -8,21 +8,16 @@
   </div>
 {% endblock %}
 
-{% block breadcrumb %}
-  <li><a href="{{ path(stores_route) }}">{% trans %}adminDashboard.stores.title{% endtrans %}</a></li>
-  <li><a href="{{ path(store_route, { id: store.id }) }}">{{ store.name }}</a></li>
-  <li>{% trans %}orders.new{% endtrans %}</li>
-{% endblock %}
 
 {% block content %}
 
   {% include 'delivery/_partials/navbar.html.twig' %}
-  
+
   {% block alerts %}
   {% endblock %}
 
-  
+
   {% set is_new = delivery.id is null %}
 
-  <div {{ react_component('Delivery/DeliveryForm', { isNew: is_new, storeId: store.id }) }}></div>
+  <div {{ react_component('Delivery/DeliveryForm', { storeId: store.id, deliveryId: delivery.id|default(null) }) }}></div>
 {% endblock %}
