--- a/assets/react/controllers/Delivery/DeliveryForm.scss
+++ b/assets/react/controllers/Delivery/DeliveryForm.scss
@@ -9,12 +9,12 @@
   display: flex;
   justify-content: space-between;
   gap: 1em;
-  max-width: 65%;
+  width: 65%;
   flex-wrap: wrap;
   overflow: hidden;
   
-  &__item {
-    max-width: 47%;
+  &__pickups, &__dropoffs {
+    width: 47%;
   }
 }
 
@@ -37,19 +37,20 @@
   }
 
   .order-informations {
-    min-width: 400px
+    min-width: 40%
   }
 
   .new-order{
     flex-direction: column;
+    justify-content: start;
 
-    &__item {
-      max-width: 100%;
+    &__pickups, &__dropoffs {
+      width: 100%;
     }
   }
 }
 
-@media (max-width: 768px){
+@media (max-width: 720px){
   .delivery-form{
     flex-direction: column;
     align-items: center;
@@ -58,7 +59,7 @@
 
   .new-order {
     margin-top: 2em;
-    max-width: 100%;
+    width: 100%;
   }
 
   .order-informations{
