--- a/js/app/components/delivery-form/Task.scss
+++ b/js/app/components/delivery-form/Task.scss
@@ -3,5 +3,26 @@
     display : flex;
     gap: 1em;
     align-items: center;
+
+    &--pickup{
+      justify-content: center;
+    }
+    
+    &--dropoff{
+      justify-content: space-around;
+    }
+  }
+
+  &__button{
+    border: none;
+    background-color: #fff
+  }
+
+  &__body--hidden{
+    display: none;
+  }
+  
+  &__footer--hidden{
+    display:none
   }
 }
