--- a/templates/admin/restaurants.html.twig
+++ b/templates/admin/restaurants.html.twig
@@ -61,8 +61,8 @@
           </li>
           <li role="separator" class="divider"></li>
           <li>
-            <a href="{{ path('admin_restaurants_edenred') }}">
-              {{ 'restaurants.edenred_transactions.title'|trans }}
+            <a href="{{ path('admin_restaurants_meal_voucher_transactions') }}">
+              {{ 'restaurants.meal_vouchers_transactions.title'|trans }}
             </a>
           </li>
           {% if nonprofits_enabled %}
