--- a/assets/react/controllers/Delivery/DeliveryForm.scss
+++ b/assets/react/controllers/Delivery/DeliveryForm.scss
@@ -74,3 +74,18 @@
     }
   }
 }
+
+.delivery-spinner {
+  width: 100%;
+  height: 32rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .loader{
+    width: 15rem;
+    height: 15rem;
+    border-width: 1.5rem;
+    margin: auto;
+  }
+}
