start modify barecodes modal

--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -49,8 +49,10 @@
           </p>
           <p>
           <div {{ react_component('BarcodesModal', {
-              items: delivery.items|serialize('json', {groups: ['task', 'task_collection', 'barcode', 'address']})
-          }) }}></div>
+              items: delivery.items|serialize('json', {groups: ['task', 'task_collection', 'barcode', 'address']}),
+              deliveryId : delivery.id
+          }) }}>
+          </div>
         </div>
         {% endif %}
 
