--- a/templates/_partials/delivery/list.html.twig
+++ b/templates/_partials/delivery/list.html.twig
@@ -107,7 +107,7 @@
       <td class="text-right">
         <a href="{{ path(routes.view, { id: delivery.id }) }}">{{ 'basics.view'|trans }}</a>
         <div {{ react_component('BarcodesModal', {
-          items: delivery.items|serialize('json', {groups: ['task', 'task_collection', 'barcode', 'address']})
+          deliveryId: delivery.id
           }) }}></div>
       </td>
     </tr>
