create VAT price converter widget

--- a/assets/react/controllers/Delivery/DeliveryForm.scss
+++ b/assets/react/controllers/Delivery/DeliveryForm.scss
@@ -30,14 +30,9 @@
 
   &__tracking{
     background-color: #f3f2f2f8;
-    border-color: #cac8c8;
-    color: #6c6a6a;
-
-    a {
-      color:#6c6a6a;
-    }
+    border-color: #dbdada;
+    color: #23527C;
   }
-
 }
 
 
