fix css, add remove override data

--- a/js/app/components/delivery-form/ShowPrice.scss
+++ b/js/app/components/delivery-form/ShowPrice.scss
@@ -9,7 +9,7 @@
   &__variant-price {
     display: flex;
     flex-direction: row;
-    align-items: flex-start; 
+    align-items: baseline; 
     width: 100%;
 
     &___label {
@@ -23,3 +23,8 @@
     }
   }
 }
+
+.total__price{
+  font-size: 1.2em;
+}
+
