--- a/templates/form/order.html.twig
+++ b/templates/form/order.html.twig
@@ -156,16 +156,17 @@
             <span>{{ 'loopeat.how_it_works.title'|trans({ '%name%': loopeat_context.name }) }}</span>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           </div>
-          <div class="modal-body mb-0 p-0">
-            <img src="{{ asset('img/loopeat/how_it_works.png') }}" class="w-100" />`
+          <div class="modal-body mb-0 p-4">
             <div class="d-flex justify-content-between">
               {% for loopeat_step in 1..4 %}
-                <div class="text-center w-25 m-2">
-                  <h5>{{ ('loopeat.how_it_works.step_' ~ loopeat_step ~ '.title')|trans({ '%name%': loopeat_context.name }) }}</h5>
+                <div class="text-center w-25">
+                  <span class="badge" style="background-color: #e17e3f;">{{ loopeat_step - 1 }}</span>
+                  <h5 class="font-weight-bold mb-1" style="color: #e17e3f;">{{ ('loopeat.how_it_works.step_' ~ loopeat_step ~ '.title')|trans({ '%name%': loopeat_context.name }) }}</h5>
                   <p>{{ ('loopeat.how_it_works.step_' ~ loopeat_step ~ '.text')|trans({ '%name%': loopeat_context.name }) }}</p>
                 </div>
               {% endfor %}
             </div>
+            <img src="{{ asset('img/loopeat/how_it_works.svg') }}" class="w-100" />`
           </div>
         </div>
       </div>
