unify color and add restriction for multidropoff

--- a/assets/react/controllers/Delivery/DeliveryForm.scss
+++ b/assets/react/controllers/Delivery/DeliveryForm.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   gap: 2em;
   padding: 2em;
+  
 }
 
 .new-order {
@@ -15,6 +16,12 @@
   
   &__pickups, &__dropoffs {
     width: 47%;
+  }
+
+  &__dropoffs__add{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -32,6 +39,10 @@
     background-color: #f3f2f2f8;
     border-color: #dbdada;
     color: #23527C;
+  }
+
+  &__complete-order button{
+    background-color: #337AB7;
   }
 }
 
