Add link to latest "major" release.

--- a/templates/admin/settings.html.twig
+++ b/templates/admin/settings.html.twig
@@ -25,7 +25,7 @@
           <span>{% trans %}form.settings.version{% endtrans %}</span>
         </td>
         <td class="text-right">
-          <span class="text-monospace">{{ coopcycle_version() }}</span>
+          <a class="text-monospace" href="{{ coopcycle_github_release_link() }}" target="_blank">{{ coopcycle_version() }}</a>
         </td>
       </tr>
       <tr>
