--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -72,3 +72,9 @@
   <hr>
   {{ form_row(form.urbantzHubId) }}
 {% endif %}
+
+{% if form.storeGLN is defined %}
+  <hr>
+  {{ form_row(form.storeGLN) }}
+{% endif %}
+
