--- a/templates/admin/_partials/mercadopago.html.twig
+++ b/templates/admin/_partials/mercadopago.html.twig
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-6">
       {{ form_widget(form.mercadopago.mercadopago_test_publishable_key) }}
-      <span class="help-block">{% trans with { '%country%': country_iso } %}form.settings.mercadopago.publishable_key.help{% endtrans %}</span>
+      <span class="help-block">{% trans %}form.settings.mercadopago.publishable_key.help{% endtrans %}</span>
     </div>
     <div class="col-md-6">
       {{ form_widget(form.mercadopago.mercadopago_live_publishable_key) }}
@@ -18,7 +18,7 @@
   <div class="row">
     <div class="col-md-6">
       {{ form_widget(form.mercadopago.mercadopago_test_access_token) }}
-      <span class="help-block">{% trans with { '%country%': country_iso } %}form.settings.mercadopago.access_token.help{% endtrans %}</span>
+      <span class="help-block">{% trans %}form.settings.mercadopago.access_token.help{% endtrans %}</span>
     </div>
     <div class="col-md-6">
       {{ form_widget(form.mercadopago.mercadopago_live_access_token) }}
