Add setting to prefer MercadoPago.

--- a/templates/form/settings.html.twig
+++ b/templates/form/settings.html.twig
@@ -39,3 +39,9 @@
   {{ parent() }}
 {% endif %}
 {% endblock %}
+
+{% block _settings_mercadopago_prefer_mercadopago_row %}
+  {% set color = 'info' %}
+  {% set icon = 'check-circle' %}
+  {{ block('switch_alert') }}
+{% endblock %}
