--- a/templates/admin/_partials/mercadopago.html.twig
+++ b/templates/admin/_partials/mercadopago.html.twig
@@ -30,16 +30,18 @@
 
 {{ form_row(form.mercadopago.mercadopago_client_secret) }}
 
-<div class="alert alert-info">
-  <i class="fa fa-info-circle"></i> {% trans with { '%redirect_uri%': url('mercadopago_oauth_callback') } %}form.settings.mercadopago.redirect_uri.help{% endtrans %}
-</div>
-
 <div class="alert alert-danger">
   <i class="fa fa-warning"></i> {{ 'form.mercadopago_livemode.enable.label'|trans }}
   <div class="pull-right">
     <div id="mercadopago_livemode_switch"></div>
   </div>
 </div>
+
+{{ form_row(form.mercadopago.prefer_mercadopago) }}
+
+<p class="help-block">
+  <i class="fa fa-info-circle"></i> {% trans with { '%redirect_uri%': url('mercadopago_oauth_callback') } %}form.settings.mercadopago.redirect_uri.help{% endtrans %}
+</p>
 
 {% if not mercadopago_livemode %}
 <p class="help-block">
