--- a/templates/order/_partials/navbar.html.twig
+++ b/templates/order/_partials/navbar.html.twig
@@ -33,7 +33,7 @@
             </a>
           </li>
         {% endif %}
-        {% if is_granted('ROLE_DISPATCHER') %}
+        {% if is_granted('ROLE_DISPATCHER') and order.delivery is not empty %}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                aria-haspopup="true" aria-expanded="false">{{ 'basics.more'|trans }} <span
