updated links to docs

--- a/templates/admin/invoicing.html.twig
+++ b/templates/admin/invoicing.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block docs %}
-  {% include '_partials/docs.html.twig' with { url: 'https://docs.google.com/document/d/1KqlJve8gdv4hoNyrfS4ge6G7Nl7khWmgULzcntP6opk/edit?usp=sharing' } %}
+  {% include '_partials/docs.html.twig' with { docsPath: 'adminDashboard.invoicing.docs_path' } %}
 {% endblock %}
 
 {% block content %}
