WIP: removed 'map_all_tasks' option

--- a/templates/admin/pricing_rule_set.html.twig
+++ b/templates/admin/pricing_rule_set.html.twig
@@ -31,7 +31,7 @@
 
     {{ form_row(form.name) }}
     {{ form_row(form.strategy) }}
-    {{ form_row(form.options) }}
+{#    {{ form_row(form.options) }}#}
 
     <hr>
 
